--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ATS</string>
+    <string name="user">Usuario</string>
     <string name="btn_listo">Listo</string>
     <string name="btn_atras">Atras</string>
     <string name="tiempo_examen_simulacion">El examen va a durar 3 horas</string>
@@ -36,4 +37,5 @@
     <string name="gmail">mariadelacruz@gmail.com</string>
     <string name="Cont">Angelica#10</string>
     <string name="titulo_registro">CREAR CUENTA</string>
+    <string name="pass">Contraseña</string>
 </resources>
