--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ATS</string>
-    <string name="user">Usuario</string>
+    <string name="user">Usuario@gmail.com</string>
     <string name="btn_listo">Listo</string>
     <string name="btn_atras">Atras</string>
     <string name="tiempo_examen_simulacion">El examen va a durar 3 horas</string>
